--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,6 +7,17 @@
   min-height: 100vh;
 }
 
+.details{
+  border:2px solid rgb(215, 215, 215);
+  width:20rem;
+  height:3rem;
+  border-radius: 4px;
+}
+
+.details::placeholder{
+  padding-left: 20px;
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
